--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <ul id="socialLinks">
           <li class="youtube">
-            <a href="https://youtube.com.br/HiveGui" target="_blank">
+            <a href="https://youtube.com.br/@HiveGui" target="_blank">
               <img src="images/youtube.svg" alt="ícone Youtube" />
             </a>
           </li>
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li class="twitter">
-            <a href="http://twitter.com.br/HiveGuiii" target="_blank">
+            <a href="http://twitter.com.br/HiveGuii" target="_blank">
               <img src="images/twitter.svg" alt="ícone Twitter" />
             </a>
           </li>
