--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <ul id="socialLinks">
           <li class="youtube">
-            <a href="https://youtube.com.br/@HiveGui" target="_blank">
+            <a href="https://www.youtube.com/@hivegui" target="_blank">
               <img src="images/youtube.svg" alt="ícone Youtube" />
             </a>
           </li>
